# avtool

./: CMakeLists.txt  README.md
av_library/: CMakeLists.txt  av_library.cpp  av_library.h
av_library/include/libavutil/: ffversion.h
av_test/: CMakeLists.txt  demo.cpp
